# dumux-adapter

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .mdl.rb  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  config.h.cmake  dumux-precice.pc.in  dune.module
appl/conjugateheattransfer/: CMakeLists.txt
appl/conjugateheattransfer/common/: dumuxpreciceindexwrapper.cc  dumuxpreciceindexwrapper.hh  helperfunctions.cc  helperfunctions.hh  preciceadapter.cc  preciceadapter.hh
appl/conjugateheattransfer/iterative/: CMakeLists.txt  dumuxpreciceindexwrapper.hh  main_freeflow.cc  main_solidenergy.cc  params.input  precice-config-serial-implicit.xml  precice-config.xml  preciceadapter.cc  preciceadapter.hh  precicewrapper.cc  precicewrapper.hh
appl/conjugateheattransfer/monolithic/: CMakeLists.txt  main.cc  params.input  problem_freeflow.hh  problem_heat.hh  spatialparams.hh
appl/conjugateheattransfer/monolithic-const-dt/: CMakeLists.txt  main.cc
appl/coupling-ff-pm/: CMakeLists.txt
appl/coupling-ff-pm/chaabaniEtAl-staircase-2d/: CMakeLists.txt  chaabaniEtAl-staircase-2d.input  chaabaniEtAl-staircase-monolithic-2d.cc  problem_darcy.hh  problem_stokes.hh
appl/coupling-ff-pm/common/: badporousmediavelocity.hh  badporousmediavelocityoutput.hh  couplingdata.hh  couplingmanager.hh  outputhelper.hh  porousmediumflowproblemwithgravity.hh
appl/coupling-ff-pm/fvca-iterative/: Allclean.sh  Allrun.sh  CMakeLists.txt  ffproblem-reversed.hh  main_fvca-iterative-ff.cc  main_fvca-iterative-pm.cc  pmproblem-reversed.hh  precice-config-parallel-implicit-reversed.xml  precice-config-serial-implicit-darcy-first.xml  precice-config-serial-implicit-reversed-darcy-first.xml  precice-config-serial-implicit-stokes-first.xml  run-iterative-simulation-test.sh  run-iterative-simulations.sh
appl/coupling-ff-pm/fvca-monolithic/: CMakeLists.txt  main_fvca-monolithic.cc  problem_darcy.hh  problem_stokes.hh
appl/coupling-ff-pm/fvca-monolithic-reversed/: CMakeLists.txt  fvca-monolithic-base.input  fvca-monolithic.cc  main.cc  problem_darcy.hh  problem_stokes.hh  run-monolithic-simulations.sh
appl/coupling-ff-pm/fvca-monolithic-reversed-3d/: CMakeLists.txt  problem_stokes_3d.hh
appl/coupling-ff-pm/iterative/: CMakeLists.txt  main_ff.cc  main_pm.cc  params.input
appl/coupling-ff-pm/iterative-reversed/: Allclean.sh  Allrun.sh  CMakeLists.txt  ffproblem-reversed.hh  main_ff-reversed.cc  main_pm-reversed.cc  params.input  pmproblem-reversed.hh  precice-config-parallel-implicit-reversed.xml  precice-config-serial-explicit-reversed.xml  precice-config-serial-implicit-reversed-darcy-first.xml  precice-config-serial-implicit-reversed.xml  run-iterative-simulation-test.sh  run-iterative-simulations.sh
appl/coupling-ff-pm/iterative-reversed-mono-flux/: main_ff-reversed.cc  main_pm-reversed.cc  params.input  precice-config-serial-explicit-reversed.xml  precice-config-serial-implicit-reversed.xml
appl/coupling-ff-pm/iterative-reversed-mono-flux-no-precice/: CMakeLists.txt  ffproblem-mono-flux.hh  ffproblem-reversed.hh  main_ff-mono-flux.cc  main_ff-reversed.cc  main_pm-mono-flux.cc  monolithicdata.hh  pmproblem-mono-flux.hh  pmproblem-reversed.hh
appl/coupling-ff-pm/monolithic/: 2pspatialparams.hh  CMakeLists.txt  README.md  ffproblem.hh  main.cc  params.input  pmproblem.hh
appl/coupling-ff-pm/monolithic-to-rename/: CMakeLists.txt  main.cc  pmproblem.hh
appl/coupling-ff-pm/monolithic/ff-pm-3d/: CMakeLists.txt  fvca-monolithic-3d.cc  fvca-monolithic-3d.input  problem_darcy_3d.hh  problem_stokes_3d.hh
appl/coupling-ff-pm/monolithic/flow-over-step-2d/: CMakeLists.txt  freeflowsubproblem.hh  main.cc  porousmediumsubproblem.hh  properties.hh
appl/coupling-ff-pm/monolithic/flow-over-step-3d/: CMakeLists.txt  freeflowsubproblem.hh  main.cc
appl/coupling-ff-pm/monolithic/interface/: CMakeLists.txt  ex_interface_coupling_ff-pm.cc
appl/coupling-ff-pm/monolithic/models/: CMakeLists.txt  ex_models_coupling_ff-pm.cc  ex_models_coupling_ff-pm.input  ex_models_ffproblem.hh  ex_models_pmproblem.hh
appl/coupling-ff-pm/monolithic/td-ff-pm-2d-chaabani/: problem_darcy.hh  problem_stokes.hh  td-ff-pm-2d-chaabani.cc  td-ff-pm-2d-chaabani.input
appl/coupling-ff-pm/monolithic/turbulence/: CMakeLists.txt  ex_turbulence_coupling_ff-pm.cc  ex_turbulence_ffproblem.hh  ex_turbulence_pmproblem.hh
appl/coupling-ff-pm/partitioned/: CMakeLists.txt
appl/coupling-ff-pm/partitioned/er-coupling-condition-convtest/: freeflowproblem.hh  main-freeflow.cc  main-porousmedium.cc
appl/coupling-ff-pm/partitioned/ff-pm-3d/: CMakeLists.txt  ffproblem-reversed.hh  main_ff-reversed.cc  main_pm-reversed.cc  params.input  pmproblem-reversed.hh
appl/coupling-ff-pm/partitioned/fvca-case-er-coupling/: 1pspatialparams.hh  ffproblem-reversed.hh  main_fvca-iterative-pm.cc
appl/coupling-ff-pm/solution/monolithic/: 1pspatialparams.hh  2pspatialparams.hh
examples/dummysolver/: Allrun.sh  CMakeLists.txt  main_dummysolver.cc  precice-dummy-solver-config.xml  test.xml
examples/ff-pm/ff-pm-3d/: CMakeLists.txt  ffproblem-reversed.hh  pmproblem-reversed.hh  precice-config.xml
examples/ff-pm/flow-over-cube-3d/: CMakeLists.txt  ffproblem-reversed.hh  main_ff-reversed.cc  main_pm-reversed.cc  params.input  pmproblem-reversed.hh  precice-config.xml
examples/ff-pm/monolithic/eggenweiler-rybak-2d/: CMakeLists.txt  convergencetest.py  main.cc  manufactured_solution.py  problem_darcy.hh  problem_stokes.hh  (+2 more)
examples/legacy/cht/: CMakeLists.txt
postprocessing/vtk/: CMakeLists.txt  main.cpp
test/monolithic/flow-over-square-2d/: CMakeLists.txt  main.cc  problem_darcy.hh  problem_stokes.hh  run-monolithic-simulations.sh  spatialparams.hh
test/partitioned/dummysolver/: Allrun.sh  CMakeLists.txt  main_dummysolver.cc  precice-dummy-solver-config.xml
test/partitioned/flow-over-square-2d/: CMakeLists.txt  create-reference-solution.sh  ffproblem-reversed.hh  main_ff.cc  main_pm.cc  params-navierstokesdarcy.input  pmproblem-reversed.hh  precice-config-pi.xml  precice-config-si-free-flow-first.xml
(+225 files in other folders)
